Fixed issue with nav link pushing title off center

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -168,14 +168,14 @@ button {
 }
 
 .favorite-movies-link {
-    float: right;
+    position: absolute;
+    right: 1rem;
     margin-top: 2rem;
-    padding-right: 1rem;
 }
 
 .web-title {
     display: inline-block;
-    margin-bottom: 0;
+    margin-top: 1rem;
 }
 
 
